feat(05-03): implement OccurrenceHighlighter with regex occurrence scan
- findOccurrences returns [start,end] pairs using Pattern.quote for safe regex
- Guards: null/blank/length<2 tokens return empty list (noise guard)
- applyTo merges occurrence CSS class over base syntax spans via overlayOccurrences
- OccurrenceHighlighterTest @Disabled removed; all 3 tests pass
- Single-char guard test updated to use "$" (length 1) per plan spec